--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,17 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  h2 Welcome to #[em Toy Weapons Co]
+
+  if error
+    p Error getting dynamic content.
+  else
+    p The Emporium has the following record counts:
+
+    ul
+      li #[strong Ammo Types:] !{data.ammoCount}
+      li #[strong Ammo Stocked:] !{data.ammoinstanceCount}
+      li #[strong Manufacturers Listed] !{data.manufacturerCount}
+      li #[strong Weapon Classes:] !{data.classCount}
+      li #[strong Weapon Types:] !{data.weaponCount}
+      li #[strong Weapons in Stock:] !{data.weaponinstanceCount}
